--- a/Aquaponic1.ipynb
+++ b/Aquaponic1.ipynb
@@ -4,7 +4,10 @@
   "metadata": {
     "colab": {
       "name": "Aquaponic1.ipynb",
-      "provenance": []
+      "provenance": [],
+      "mount_file_id": "1bdmSJ3_xoL2i9NFynubTStexD-X1LMls",
+      "authorship_tag": "ABX9TyP1ccfr7EBtreSKJeUnfJB+",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +18,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/gayathri2510/aquap/blob/master/Aquaponic1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": null,
@@ -27,6 +40,17 @@
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "enezdR6sHmH-"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
